# CSV-CPP

./: CMakeLists.txt  CSV.sln
CSV_Library/: CMakeLists.txt  CSV.h  CSVRow.h  CSV_Library.vcxproj  CSV_Library.vcxproj.filters
CSV_Library/Include/: CSVBinder.h  CSVRow.h
CSV_Library/Src/: CSV.cpp
Google_Test_Application/: CMakeLists.txt  Tests.cpp
TestApplication/: CMakeLists.txt  TestApplication.cpp  TestApplication.vcxproj  TestApplication.vcxproj.filters
TestApplication/Data/: One.csv
